UPDATE: Text-aligned correctly

--- a/main.css
+++ b/main.css
@@ -306,6 +306,7 @@ nav {
   font-family: "Inter", Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: 700;
+  text-align: left;
 }
 .dayBtn h2 {
   width: 105px;
