--- a/style/components/_dayElement.scss
+++ b/style/components/_dayElement.scss
@@ -16,18 +16,14 @@
 
     &:hover {
       cursor: pointer;
-      background: linear-gradient(
-        180deg,
-        rgba(255, 255, 255, 0.2) 0%,
-        rgba(255, 255, 255, 0.2) 100%
-      );
+      background: linear-gradient(180deg,
+          rgba(255, 255, 255, 0.2) 0%,
+          rgba(255, 255, 255, 0.2) 100%);
     }
 
-    background: linear-gradient(
-      180deg,
+    background: linear-gradient(180deg,
       rgba(255, 255, 255, 0.2) 0%,
-      rgba(255, 255, 255, 0.04) 100%
-    );
+      rgba(255, 255, 255, 0.04) 100%);
     color: #fff;
 
     :last-child {
@@ -64,6 +60,7 @@
   display: flex;
   justify-content: space-between;
   @include fontSemiBold("Inter");
+  text-align: left;
 
   h2 {
     width: 105px;
